--- a/student/index.html
+++ b/student/index.html
@@ -73,7 +73,7 @@
 
 <!-- Phần nhập tên -->
 <div id="loginArea">
-  <h3>Nhập tên học sinh của bạn:</h3>
+  <h3>Nhập tên nhóm của bạn:</h3>
   <input type="text" id="studentName" placeholder="Nhập tên..." />
   <button onclick="startQuiz()">Bắt đầu</button>
 </div>
@@ -222,7 +222,7 @@
       return;
     }
     localStorage.setItem("name", nameInput);
-    studentDisplay.innerText = "👨‍🎓 Học sinh: " + nameInput;
+    studentDisplay.innerText = "👨‍🎓 Tên nhóm: " + nameInput;
     document.getElementById("loginArea").style.display = "none";
     document.getElementById("quizArea").style.display = "block";
   }
