--- a/teacher/index.html
+++ b/teacher/index.html
@@ -58,6 +58,8 @@
 </div>
 
 <div id="content">
+  <h1 style="color: blue;">BẢN HÙNG CA VANG MÃI</h1>
+    <h2 style="color: green;">PHẦN 1: THỐNG NHẤT NON SÔNG</h2>
   <h2>📋 Điều khiển & Kết quả</h2>
   <h1>⏱️ <span id="countdown">—</span> | Câu hỏi: <span id="currentQ">—</span></h1>
   <img id="questionImage" src="" alt="">
@@ -87,7 +89,7 @@
   firebase.initializeApp(firebaseConfig);
   const db = firebase.database();
 
-  const correct = {1:'A',2:'B',3:'C',4:'D',5:'A',6:'B',7:'C',8:'D',9:'A',10:'B'};
+  const correct = {1:'B',2:'C',3:'C',4:'D',5:'B',6:'D',7:'A',8:'D',9:'A',10:'D'};
 
   const sidebar = document.getElementById("questionButtons");
   const countdownEl = document.getElementById("countdown");
