--- a/teacher/index.html
+++ b/teacher/index.html
@@ -58,9 +58,8 @@
 </div>
 
 <div id="content">
-  <h1 style="color: blue;">BẢN HÙNG CA VANG MÃI</h1>
+  <h1 style="color: Red;">BẢN HÙNG CA VANG MÃI</h1>
     <h2 style="color: green;">PHẦN 1: THỐNG NHẤT NON SÔNG</h2>
-  <h2>📋 Điều khiển & Kết quả</h2>
   <h1>⏱️ <span id="countdown">—</span> | Câu hỏi: <span id="currentQ">—</span></h1>
   <img id="questionImage" src="" alt="">
   <h3>Kết quả câu <span id="currentQ2">—</span>:</h3>
