--- a/teacher/index.html
+++ b/teacher/index.html
@@ -50,9 +50,10 @@
   </style>
 </head>
 <body>
-<div style="text-align: center; margin-bottom: 20px;">
-  <img src="images/banner.png" alt="Banner" style="max-width: 100%; height: auto;">
-</div>
+
+//  <img src="images/banner.png" alt="Banner" style="max-width: 100%; height: auto;">
+  <img src="images/banner.png" alt="Banner" style="max-width: 100%; height: auto; display: block; margin: 0 auto;">
+
 
 <div id="sidebar">
   <h3>🛠️ Câu hỏi</h3>
