--- a/teacher/index.html
+++ b/teacher/index.html
@@ -50,9 +50,8 @@
   </style>
 </head>
 <body>
-
-//  <img src="images/banner.png" alt="Banner" style="max-width: 100%; height: auto;">
-  <img src="images/banner.png" alt="Banner" style="max-width: 100%; height: auto; display: block; margin: 0 auto;">
+  <img src="images/banner.png" alt="Banner" style="max-width: 100%; height: auto;">
+ 
 
 
 <div id="sidebar">
