--- a/teacher/index.html
+++ b/teacher/index.html
@@ -50,7 +50,7 @@
   </style>
 </head>
 <body>
-  <img src="images/banner.png" alt="Banner" style="max-width: 100%; height: auto;">
+  <img src="images/banner.png" alt="Banner" style="max-width: 60%; height: 60%;">
  
 
 
