--- a/teacher/index.html
+++ b/teacher/index.html
@@ -57,7 +57,7 @@
 </div>
 
 <div id="content">
-   <img src="images/banner.png" alt="Banner" style="max-width: 60%; height: 60%;">
+   <img src="images/banner.png" alt="Banner" >
   <h1 style="color: Red;">BẢN HÙNG CA VANG MÃI</h1>
     <h2 style="color: green;">PHẦN 1: THỐNG NHẤT NON SÔNG</h2>
   <h1>⏱️ <span id="countdown">—</span> | Câu hỏi: <span id="currentQ">—</span></h1>
