--- a/teacher/index.html
+++ b/teacher/index.html
@@ -1,81 +1,92 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Điều khiển & Kết quả</title>
+  <title>PHẦN 1 </title>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: Arial; display: flex; }
-    #sidebar {
-      width: 180px; padding: 10px;
-      border-right: 2px solid #ccc;
+    body { 
+      font-family: Arial; 
+      text-align: left; /* Canh trái toàn bộ trang */
+      padding-top: 30px;
+      display: flex;
     }
-    #sidebar button {
-      width: 100%;
-      margin: 5px 0;
-      padding: 10px;
-      font-size: 16px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 6px;
+    #questionButtons {
+      display: flex;
+      flex-direction: column;
+      margin-right: 50px; /* Để cách với các phần còn lại của trang */
+    }
+    button {
+      font-size: 18px; 
+      margin: 5px; 
+      padding: 10px 20px;
+      background-color: #4CAF50; 
+      color: white; 
+      border: none; 
+      border-radius: 6px; 
       cursor: pointer;
     }
-    #sidebar button.selected {
+    button.selected {
       background-color: #ff9800;
     }
-    #content {
-      flex: 1;
-      padding: 20px;
-      text-align: center;
+    table { 
+      border-collapse: collapse; 
+      margin: 20px auto; 
+      width: 80%; 
     }
-    table {
-      margin: 10px auto;
-      border-collapse: collapse;
-      width: 90%;
+    th, td { 
+      border: 1px solid #ccc; 
+      padding: 10px; 
+      text-align: center; 
     }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
+    th { 
+      background-color: #f2f2f2; 
     }
-    img {
-      max-width: 80%;
-      margin: 20px 0;
-      border: 2px solid #aaa;
-      border-radius: 8px;
+    canvas { 
+      width: 300px !important; 
+      height: 200px !important; 
+      margin-top: 20px; 
     }
-    canvas { width: 90% !important; height: 300px !important; }
+    #countdown { 
+      font-size: 24px; 
+      color: red; 
+      margin-top: 10px; 
+    }
   </style>
 </head>
 <body>
 
-<div id="sidebar">
-  <h3>🛠️ Câu hỏi</h3>
-  <div id="questionButtons"></div>
-  <button style="background-color: red; margin-top: 20px;" onclick="resetGame()">🔄 Reset</button>
-</div>
+<h2>📋Điều khiển & Kết quả</h2>
 
-<div id="content">
-  <h2>📋 Điều khiển & Kết quả</h2>
-  <h4>⏱️ <span id="countdown">—</span> | Câu hỏi: <span id="currentQ">—</span></h4>
-  <img id="questionImage" src="" alt="">
-  <h3>Kết quả câu <span id="currentQ2">—</span>:</h3>
-  <table>
-    <thead>
-      <tr><th>Học sinh</th><th>Đáp án</th><th>Điểm</th></tr>
-    </thead>
-    <tbody id="resultsBody">
-      <tr><td colspan="3">Chưa có dữ liệu...</td></tr>
-    </tbody>
-  </table>
-  <h3>Biểu đồ điểm</h3>
-  <canvas id="scoreChart"></canvas>
+<div style="display: flex;">
+  <div id="questionButtons"></div>
+  <div>
+    <p>Chọn câu để bắt đầu:</p>
+    <h3>⏱️ Còn lại: <span id="countdown">—</span></h3>
+
+    <h3>Kết quả câu <span id="currentQ">—</span>:</h3>
+    <table>
+      <thead>
+        <tr><th>Học sinh</th><th>Câu</th><th>Đáp án</th><th>Điểm</th></tr>
+      </thead>
+      <tbody id="resultsBody">
+        <tr><td colspan="4">Chưa có dữ liệu...</td></tr>
+      </tbody>
+    </table>
+
+    <h3>Biểu đồ tổng điểm</h3>
+    <canvas id="scoreChart"></canvas>
+
+    <br>
+    <button style="background-color: red;" onclick="resetGame()">🔄 Reset dữ liệu</button>
+  </div>
 </div>
 
 <script>
-  const firebaseConfig = {
+  // Firebase setup
+  const cfg = {
     apiKey: "AIzaSyB-ST5U4VSxraEGKl3INjGKKdl9Dik5bg0",
     authDomain: "giaiphong2025-697c5.firebaseapp.com",
     databaseURL: "https://giaiphong2025-697c5-default-rtdb.firebaseio.com",
@@ -84,103 +95,98 @@
     messagingSenderId: "205746810625",
     appId: "1:205746810625:web:ec05b354a6221f7b3af500"
   };
-  firebase.initializeApp(firebaseConfig);
+  firebase.initializeApp(cfg);
   const db = firebase.database();
 
-  const correct = {1:'B',2:'C',3:'C',4:'D',5:'B',6:'D',7:'A',8:'D',9:'A',10:'D'};
+  // đáp án đúng
+  const correct = {1:'A',2:'B',3:'C',4:'D',5:'A',6:'B',7:'C',8:'D',9:'A',10:'B'};
 
-  const sidebar = document.getElementById("questionButtons");
+  // UI refs
+  const questionContainer = document.getElementById("questionButtons");
   const countdownEl = document.getElementById("countdown");
-  const currentQEl = document.getElementById("currentQ");
-  const currentQ2El = document.getElementById("currentQ2");
+  const currentQEl  = document.getElementById("currentQ");
   const resultsBody = document.getElementById("resultsBody");
   const ctx = document.getElementById("scoreChart").getContext("2d");
-  const questionImage = document.getElementById("questionImage");
-
   let barChart = null;
-  let countdownInt = null;
-  let curQ = null;
 
-  for (let i = 1; i <= 10; i++) {
-    const btn = document.createElement("button");
-    btn.textContent = "▶️ Câu " + i;
-    btn.id = "q" + i;
-    btn.onclick = () => startQuestion(i);
-    sidebar.appendChild(btn);
+  // tạo nút 1–10
+  for(let i=1;i<=10;i++){
+    const b=document.createElement("button");
+    b.innerText="▶️ Câu "+i;
+    b.id="q"+i;
+    b.onclick=()=>startQuestion(i);
+    questionContainer.appendChild(b);
   }
 
-  function startQuestion(n) {
-    curQ = n;
-    db.ref("currentQuestion").set({number: n, ts: Date.now()});
-    questionImage.src = `./images/C${padded}.png`;
-    currentQEl.innerText = n;
-    currentQ2El.innerText = n;
-    resultsBody.innerHTML = <tr><td colspan="3">Đang chờ học sinh...</td></tr>;
+  let countdownInt, curQ=null;
+
+  function startQuestion(n){
+    // clear bảng cũ
+    resultsBody.innerHTML=`<tr><td colspan="4">Chưa có dữ liệu...</td></tr>`;
+    // highlight nút
+    document.querySelectorAll("#questionButtons button")
+      .forEach(x=>x.classList.remove("selected"));
+    document.getElementById("q"+n).classList.add("selected");
+    // set hiện question & reset đồng hồ
+    curQ=n; currentQEl.innerText=n;
     startCountdown(30);
-    document.querySelectorAll("#sidebar button").forEach(b => b.classList.remove("selected"));
-    document.getElementById("q" + n).classList.add("selected");
+    // thông báo cho student
+    db.ref("currentQuestion").set({number:n,ts:Date.now()});
   }
 
-  function startCountdown(sec) {
+  function startCountdown(sec){
     clearInterval(countdownInt);
-    let t = sec;
-    countdownEl.innerText = ${t}s;
-    countdownInt = setInterval(() => {
-      t--;
-      countdownEl.innerText = ${t}s;
-      if (t <= 0) {
+    let t=sec;
+    countdownEl.innerText=`${t}s`;
+    countdownInt=setInterval(()=>{
+      t--; countdownEl.innerText=`${t}s`;
+      if(t<=0){
         clearInterval(countdownInt);
-        countdownEl.innerText = "0s";
-        updateResult();
+        countdownEl.innerText="0s";
       }
-    }, 1000);
+    },1000);
   }
 
-  function updateResult() {
-    db.ref("answers").once("value").then(snap => {
-      const data = snap.val() || {};
-      const names = Object.keys(data);
-      const rows = names.map(u => {
-        const ans = (data[u]["cau"+curQ] || "");
-        const sc = (ans === correct[curQ]) ? 3 : 0;
-        return <tr><td>${u}</td><td>${ans}</td><td>${sc}</td></tr>;
-      });
-      resultsBody.innerHTML = rows.length ? rows.join("") : <tr><td colspan="3">Không có dữ liệu.</td></tr>;
-      updateChart(data);
-    });
-  }
-
-  function updateChart(data) {
-    const names = Object.keys(data);
-    const pts = names.map(u => {
-      let sum = 0;
-      for (const k in data[u]) {
-        const qn = +k.replace("cau", "");
-        if (data[u][k] === correct[qn]) sum += 3;
+  // lắng nghe answers realtime
+  db.ref("answers").on("value",snap=>{
+    const data=snap.val()||{};
+    // cập nhật biểu đồ tổng điểm
+    const names=Object.keys(data), pts=names.map(u=>{
+      let sum=0;
+      for(const k in data[u]){
+        const qn=+k.replace("cau","");
+        if(data[u][k]===correct[qn]) sum+=3;
       }
       return sum;
     });
-    const colors = names.map(_ => '#' + Math.floor(Math.random() * 0xFFFFFF).toString(16));
-    if (barChart) barChart.destroy();
-    barChart = new Chart(ctx, {
-      type: 'bar',
-      data: {labels: names, datasets: [{data: pts, backgroundColor: colors}]},
-      options: {responsive: true, scales: {y: {beginAtZero: true, max: 30}}}
+    // color array
+    const colors=names.map(_=>'#'+Math.floor(Math.random()*0xFFFFFF).toString(16));
+    if(barChart) barChart.destroy();
+    barChart=new Chart(ctx,{type:'bar',
+      data:{labels:names,datasets:[{data:pts,backgroundColor:colors,borderColor:colors,borderWidth:1}]},
+      options:{responsive:true,scales:{y:{beginAtZero:true,max:30}},plugins:{legend:{display:false}}}
     });
-  }
+    // nếu đang xem 1 câu, cập nhật luôn bảng câu đó
+    if(curQ){
+      const rows=names.map(u=>{
+        const ans=(data[u]['cau'+curQ]||'');
+        const sc=(ans===correct[curQ]?3:0);
+        return `<tr><td>${u}</td><td>${curQ}</td><td>${ans}</td><td>${sc}</td></tr>`;
+      });
+      resultsBody.innerHTML=rows.length?rows.join(""):`<tr><td colspan="4">Chưa có dữ liệu...</td></tr>`;
+    }
+  });
 
-  function resetGame() {
-    if (confirm("Bạn có chắc muốn reset?")) {
-      db.ref("currentQuestion").remove();
+  function resetGame(){
+    if(confirm("Xóa toàn bộ dữ liệu?")){
       db.ref("answers").remove();
+      db.ref("currentQuestion").remove();
       clearInterval(countdownInt);
-      countdownEl.innerText = "—";
-      currentQEl.innerText = "—";
-      currentQ2El.innerText = "—";
-      questionImage.src = "";
-      resultsBody.innerHTML = <tr><td colspan="3">Chưa có dữ liệu...</td></tr>;
-      if (barChart) barChart.destroy();
-      document.querySelectorAll("#sidebar button").forEach(b => b.classList.remove("selected"));
+      countdownEl.innerText="—";
+      currentQEl.innerText="—";
+      resultsBody.innerHTML=`<tr><td colspan="4">Chưa có dữ liệu...</td></tr>`;
+      document.querySelectorAll("#questionButtons button").forEach(x=>x.classList.remove("selected"));
+      if(barChart)barChart.destroy();
     }
   }
 </script>
