--- a/teacher/index.html
+++ b/teacher/index.html
@@ -1,113 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>PHẦN 1 </title>
+  <title>Giáo viên điều khiển</title>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { 
-      font-family: Arial; 
-      display: flex; 
-      justify-content: center; /* Căn giữa toàn bộ trang */
-      align-items: flex-start;
-      padding-top: 30px;
-      gap: 40px; /* Khoảng cách giữa các phần tử */
-    }
-    #questionButtons {
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
       display: flex;
-      flex-direction: column;
-      gap: 15px; /* Khoảng cách giữa các nút câu hỏi */
-      width: 150px; /* Chiều rộng cố định cho cột câu hỏi */
+      height: 100vh;
     }
-    button {
-      font-size: 18px; 
-      margin: 5px; 
-      padding: 10px 20px;
-      background-color: #4CAF50; 
-      color: white; 
-      border: none; 
-      border-radius: 6px; 
-      cursor: pointer;
+    #sidebar {
+      width: 200px;
+      background-color: #f7f7f7;
+      padding: 20px;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+      overflow-y: auto;
     }
-    button.selected {
-      background-color: #ff9800;
-    }
-    table { 
-      border-collapse: collapse; 
-      width: 100%; /* Chiếm toàn bộ chiều rộng của phần bên phải */
-    }
-    th, td { 
-      border: 1px solid #ccc; 
-      padding: 10px; 
-      text-align: center; 
-    }
-    th { 
-      background-color: #f2f2f2; 
-    }
-    canvas { 
-      width: 100% !important; 
-      height: 200px !important; 
-      margin-top: 20px; 
-    }
-    #countdown { 
-      font-size: 24px; 
-      color: red; 
-      margin-top: 10px; 
-    }
-    .content {
-      flex: 1; /* Phần còn lại chiếm toàn bộ không gian */
-    }
-    h2 {
-      text-align: center; /* Căn giữa tiêu đề */
-    }
-    #questionImage {
+    #sidebar button {
       width: 100%;
-      height: auto;
+      margin-bottom: 10px;
+      padding: 10px;
+      font-size: 16px;
+      cursor: pointer;
+      border: none;
+      background-color: #4CAF50;
+      color: white;
+      border-radius: 8px;
+      transition: 0.3s;
+    }
+    #sidebar button:hover {
+      background-color: #45a049;
+    }
+    #content {
+      flex: 1;
+      padding: 20px;
+      text-align: center;
+    }
+    img {
+      max-width: 90%;
       margin-top: 20px;
-      border: 1px solid #ccc;
-      max-width: 600px; /* Giới hạn kích thước hình ảnh */
+      border: 2px solid #ccc;
+      border-radius: 10px;
+    }
+    #currentQuestionText {
+      font-size: 24px;
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
 
-<h2>📋Điều khiển & Kết quả</h2>
+<div id="sidebar">
+  <h3>Chọn câu hỏi</h3>
+  <button onclick="selectQuestion(1)">Câu 1</button>
+  <button onclick="selectQuestion(2)">Câu 2</button>
+  <button onclick="selectQuestion(3)">Câu 3</button>
+  <button onclick="selectQuestion(4)">Câu 4</button>
+  <button onclick="selectQuestion(5)">Câu 5</button>
+  <button onclick="selectQuestion(6)">Câu 6</button>
+  <button onclick="selectQuestion(7)">Câu 7</button>
+  <button onclick="selectQuestion(8)">Câu 8</button>
+  <button onclick="selectQuestion(9)">Câu 9</button>
+  <button onclick="selectQuestion(10)">Câu 10</button>
+  <hr>
+  <button style="background-color:#e74c3c;" onclick="resetQuestion()">Reset</button>
+</div>
 
-<div style="display: flex; gap: 40px;">
-  <div id="questionButtons"></div>
-
-  <div class="content">
-    <p>Chọn câu để bắt đầu:</p>
-    <h3>⏱️ Còn lại: <span id="countdown">—</span></h3>
-
-    <h3>Kết quả câu <span id="currentQ">—</span>:</h3>
-    <table>
-      <thead>
-        <tr><th>Học sinh</th><th>Câu</th><th>Đáp án</th><th>Điểm</th></tr>
-      </thead>
-      <tbody id="resultsBody">
-        <tr><td colspan="4">Chưa có dữ liệu...</td></tr>
-      </tbody>
-    </table>
-
-    <h3>Biểu đồ tổng điểm</h3>
-    <canvas id="scoreChart"></canvas>
-
-    <br>
-    <button style="background-color: red;" onclick="resetGame()">🔄 Reset dữ liệu</button>
-
-    <!-- Hình ảnh câu hỏi -->
-    <div id="questionImageContainer">
-      <img id="questionImage" src="" alt="Câu hỏi hình ảnh sẽ hiển thị ở đây">
-    </div>
-  </div>
+<div id="content">
+  <div id="currentQuestionText">Câu hỏi hiện tại: —</div>
+  <img id="teacherQuestionImage" src="" alt="Câu hỏi sẽ hiển thị tại đây">
 </div>
 
 <script>
-  // Firebase setup
-  const cfg = {
+  // Cấu hình Firebase
+  const firebaseConfig = {
     apiKey: "AIzaSyB-ST5U4VSxraEGKl3INjGKKdl9Dik5bg0",
     authDomain: "giaiphong2025-697c5.firebaseapp.com",
     databaseURL: "https://giaiphong2025-697c5-default-rtdb.firebaseio.com",
@@ -116,103 +86,33 @@
     messagingSenderId: "205746810625",
     appId: "1:205746810625:web:ec05b354a6221f7b3af500"
   };
-  firebase.initializeApp(cfg);
+  firebase.initializeApp(firebaseConfig);
   const db = firebase.database();
 
-  // đáp án đúng
-  const correct = {1:'A',2:'B',3:'C',4:'D',5:'A',6:'B',7:'C',8:'D',9:'A',10:'B'};
-
-  // UI refs
-  const questionContainer = document.getElementById("questionButtons");
-  const countdownEl = document.getElementById("countdown");
-  const currentQEl  = document.getElementById("currentQ");
-  const resultsBody = document.getElementById("resultsBody");
-  const ctx = document.getElementById("scoreChart").getContext("2d");
-  const questionImage = document.getElementById("questionImage");
-  let barChart = null;
-
-  // tạo nút 1–10
-  for(let i=1;i<=10;i++){
-    const b=document.createElement("button");
-    b.innerText="▶️ Câu "+i;
-    b.id="q"+i;
-    b.onclick=()=>startQuestion(i);
-    questionContainer.appendChild(b);
-  }
-
-  let countdownInt, curQ=null;
-
-  function startQuestion(n){
-    // clear bảng cũ
-    resultsBody.innerHTML=`<tr><td colspan="4">Chưa có dữ liệu...</td></tr>`;
-    // highlight nút
-    document.querySelectorAll("#questionButtons button")
-      .forEach(x=>x.classList.remove("selected"));
-    document.getElementById("q"+n).classList.add("selected");
-    // set hiện question & reset đồng hồ
-    curQ=n; currentQEl.innerText=n;
-    startCountdown(30);
-    // Thay đổi hình ảnh
-    questionImage.src = `images/C0${n}.png`;
-    // thông báo cho student
-    db.ref("currentQuestion").set({number:n,ts:Date.now()});
-  }
-
-  function startCountdown(sec){
-    clearInterval(countdownInt);
-    let t=sec;
-    countdownEl.innerText=`${t}s`;
-    countdownInt=setInterval(()=>{
-      t--; countdownEl.innerText=`${t}s`;
-      if(t<=0){
-        clearInterval(countdownInt);
-        countdownEl.innerText="0s";
-      }
-    },1000);
-  }
-
-  // lắng nghe answers realtime
-  db.ref("answers").on("value",snap=>{
-    const data=snap.val()||{};
-    // cập nhật biểu đồ tổng điểm
-    const names=Object.keys(data), pts=names.map(u=>{
-      let sum=0;
-      for(const k in data[u]){
-        const qn=+k.replace("cau","");
-        if(data[u][k]===correct[qn]) sum+=3;
-      }
-      return sum;
-    });
-    // color array
-    const colors=names.map(_=>'#'+Math.floor(Math.random()*0xFFFFFF).toString(16));
-    if(barChart) barChart.destroy();
-    barChart=new Chart(ctx,{type:'bar',
-      data:{labels:names,datasets:[{data:pts,backgroundColor:colors,borderColor:colors,borderWidth:1}]},
-      options:{responsive:true,scales:{y:{beginAtZero:true,max:30}},plugins:{legend:{display:false}}}
-    });
-    // nếu đang xem 1 câu, cập nhật luôn bảng câu đó
-    if(curQ){
-      const rows=names.map(u=>{
-        const ans=(data[u]['cau'+curQ]||'');
-        const sc=(ans===correct[curQ]?3:0);
-        return `<tr><td>${u}</td><td>${curQ}</td><td>${ans}</td><td>${sc}</td></tr>`;
-      });
-      resultsBody.innerHTML=rows.length?rows.join(""):`<tr><td colspan="4">Chưa có dữ liệu...</td></tr>`;
+  // Lắng nghe sự thay đổi của câu hỏi hiện tại từ Firebase (Giáo viên chọn câu hỏi nào)
+  db.ref("currentQuestion").on("value", snapshot => {
+    const data = snapshot.val();
+    if (data && data.number) {
+      const number = data.number;
+      const padded = String(number).padStart(2, '0');
+      // Cập nhật hình ảnh cho giáo viên
+      document.getElementById("teacherQuestionImage").src = `./images/c${padded}.png`;
+      document.getElementById("currentQuestionText").innerText = `Câu hỏi hiện tại: ${number}`;
     }
   });
 
-  function resetGame(){
-    if(confirm("Xóa toàn bộ dữ liệu?")){
-      db.ref("answers").remove();
-      db.ref("currentQuestion").remove();
-      clearInterval(countdownInt);
-      countdownEl.innerText="—";
-      currentQEl.innerText="—";
-      resultsBody.innerHTML=`<tr><td colspan="4">Chưa có dữ liệu...</td></tr>`;
-      document.querySelectorAll("#questionButtons button").forEach(x=>x.classList.remove("selected"));
-      if(barChart)barChart.destroy();
-      questionImage.src = ""; // Reset hình ảnh
-    }
+  // Hàm chọn câu hỏi cho giáo viên
+  function selectQuestion(number) {
+    db.ref("currentQuestion").set({
+      number: number
+    });
+  }
+
+  // Reset câu hỏi
+  function resetQuestion() {
+    db.ref("currentQuestion").remove();
+    document.getElementById("teacherQuestionImage").src = "";
+    document.getElementById("currentQuestionText").innerText = "Câu hỏi hiện tại: —";
   }
 </script>
 
