--- a/teacher/index.html
+++ b/teacher/index.html
@@ -96,7 +96,7 @@
       const number = data.number;
       const padded = String(number).padStart(2, '0');
       // Cập nhật hình ảnh cho giáo viên
-      document.getElementById("teacherQuestionImage").src = `./images/c${padded}.png`;
+      document.getElementById("teacherQuestionImage").src = `./images/C${padded}.png`;
       document.getElementById("currentQuestionText").innerText = `Câu hỏi hiện tại: ${number}`;
     }
   });
