--- a/teacher/index.html
+++ b/teacher/index.html
@@ -94,7 +94,7 @@
     const data = snapshot.val();
     if (data && data.number) {
       const number = data.number;
-      const padded = String(number).padStart(2, '0');
+      const padded = String(number).padStart(2, '0');  // Đảm bảo tên tệp là C01, C02, ...
       // Cập nhật hình ảnh cho giáo viên
       document.getElementById("teacherQuestionImage").src = `./images/C${padded}.png`;
       document.getElementById("currentQuestionText").innerText = `Câu hỏi hiện tại: ${number}`;
